--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,15 @@
     background-color: pink;
     border: 1px solid black;
     text-align: center;
-    height: 200px;
+    min-height: 200px;
     line-height: 200px;
-    flex-grow: 1;
+}
+
+.padding-5{
+    padding: 5px;  
+}
+
+[class^="col-"]>.row [class^="col-"]{
+    background-color: brown;
+    border: 1px solid white;
 }
